--- a/explain-service/src/main/resources/bootstrap-docker.yml
+++ b/explain-service/src/main/resources/bootstrap-docker.yml
@@ -1,4 +1,6 @@
 spring:
+ application:
+  name: explain-service
  cloud:
   config:
-   uri: http://config-server:8888
+   uri: http://config-server:8888   
