--- a/explain-service/src/main/resources/bootstrap.yml
+++ b/explain-service/src/main/resources/bootstrap.yml
@@ -1,21 +1,6 @@
-server:
-  port: 8082
-
 spring:
   application:
-    name: explainservice
+    name: explain-service
   cloud:
     config:
       uri: http://localhost:8888
-
-endpoints:
-  refresh:
-    enabled: true
-
-management:
-  #security:
-  # enabled: false
-  endpoints:
-   web:
-    exposure:
-     include: "*"
