--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,11 @@
 
 	<modules>
     	<module>oauth-server</module>
+   	 	<module>config-server</module>
+   	 	<module>service-registry</module>
+   	 	<module>useful-service</module>
+   	 	<module>sample-service</module>
+   	 	<module>explain-service</module>
+    <module>api-gateway-server</module>
   </modules>
 </project>
