set logstash configuration

--- a/elk/logstash/config/logstash.conf
+++ b/elk/logstash/config/logstash.conf
@@ -1,4 +1,7 @@
 input {
+  beats {
+    port => 5044
+  }
   tcp {
     port => 9999
     codec => line
@@ -10,10 +13,18 @@ filter {
     source => "message"
     recursive => "true"
   }
+  grok {
+    match => { "message" => "%{COMBINEDAPACHELOG}" }
+  }
+  date {
+    match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
+  }
 }
  
 output {
   elasticsearch {
-	hosts => "elasticsearch:9200"
+		hosts => "elasticsearch:9200"
+		index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}" 
+    	document_type => "%{[@metadata][type]}" 
 	}
 }
